--- a/config.json
+++ b/config.json
@@ -10,14 +10,14 @@
     "cv03": "ignore",
     "cv04": "ignore",
     "cv31": "ignore",
-    "cv32": "ignore",
+    "cv32": "enable",
     "cv33": "ignore",
     "cv34": "ignore",
-    "cv35": "ignore",
+    "cv35": "enable",
     "cv36": "ignore",
     "cv98": "ignore",
     "cv99": "ignore",
-    "ss01": "enable",
+    "ss01": "ignore",
     "ss02": "ignore",
     "ss03": "ignore",
     "ss04": "ignore",
